# MARM_fmw_v0

./: CMakeLists.txt  LICENSE  data_0.csv  notes.md  nrf52840dk_nrf52840.overlay  prj.conf
_oldsrc/: main_old.c  my_lbs.c  sd_card_.c
boards/: nrf52840dk_nrf52840.overlay
dts/bindings/: intan,rhd2232.yaml
inc/: device_status.h  fakedata_module.h  fifo_buffer.h  intan.h  neural_data.h  neuralbs.h  sd_card.h
scripts/: binarydecoder.py  data_153.csv  data_35.csv  data_55.csv  f_session1.csv  f_session3.csv  large_plotter.py  plot_attribute_deviation.py  plot_neural_data.py  process_neural_data.py  process_neural_data2.py  session13.csv  session19.csv  session21.csv  session22.csv  session9.csv  test_ble_log_decoding.py
scripts/past_files/: data_20.csv
scripts/poweranalyser/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv  process_power_data.py
scripts/session_files/: session26.csv  session3.csv  session4.csv  session56.csv  session57.csv
scripts/throughputdata/: b1.txt  b10.txt  b15.txt  b4.txt  b5.txt  b6.txt  fb1.txt
scripts/throughputdata_out2/: 1000_BLE_Intan.csv  1000_BLEplusSD_Fakedata_BLE.csv  1000_BLEplusSD_Fakedata_SD.csv  1000_BLEplusSD_Intan_BLE.csv  1000_BLEplusSD_Intan_SD.csv  1000_SD_Intan.csv  100_BLE_Intan.csv  100_BLEplusSD_Fakedata_BLE.csv  100_BLEplusSD_Fakedata_SD.csv  100_BLEplusSD_Intan_BLE.csv  100_BLEplusSD_Intan_SD.csv  100_SD_Intan.csv  1200_BLE_Intan.csv  (+30 more)
src/: fakedata_module.c  fifo_buffer.c  intan.c  main.c  my_lbs.c  my_lbs.h  neuralbs.c  sd_card.c
(+22 files in other folders)
